--- a/website/index.html
+++ b/website/index.html
@@ -3,6 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
+  <!-- MS Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "usr849394v");
+  </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7SPD4J3KSJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7SPD4J3KSJ');
+  </script>
   <meta name="google-site-verification" content="fdDQZoT5vPqNqOpgs3tThIPjW6XJiS_49M1QDdIF-Qs" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bookmarks as Thumbnails</title>
